[gd_scene load_steps=6 format=3 uid="uid://cjjuebkfsyuhh"]

[ext_resource type="Script" uid="uid://cq1j18mcmg8nx" path="res://Dialogs/GoToPageMenu.gd" id="1_kxo5c"]
[ext_resource type="Texture2D" uid="uid://bm3feqv4swt10" path="res://Images/close.svg" id="2_l4mxa"]
[ext_resource type="Texture2D" uid="uid://btq3k28hwwqdf" path="res://Images/close-bright.svg" id="3_bkrxh"]
[ext_resource type="Texture2D" uid="uid://681axsk0b4ld" path="res://Images/close-dark.svg" id="4_qhmoc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nlvh"]
bg_color = Color(0.237539, 0.237539, 0.237539, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GoToPageMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6nlvh")
script = ExtResource("1_kxo5c")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = 44.0
texture_normal = ExtResource("2_l4mxa")
texture_pressed = ExtResource("2_l4mxa")
texture_hover = ExtResource("3_bkrxh")
texture_disabled = ExtResource("4_qhmoc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 60.0
offset_right = 290.0
offset_bottom = 620.0
theme_override_constants/separation = 16

[node name="GoToPageTitle" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Go To Page"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PageNumberContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PageNumberContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Page Number:"
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PageNumberContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="StatusLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
offset_left = 50.0
offset_top = 640.0
offset_right = 950.0
offset_bottom = 668.0
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/PageNumberContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
